--- a/.github/workflows/test-linux-deb.yml
+++ b/.github/workflows/test-linux-deb.yml
@@ -47,7 +47,7 @@ jobs:
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
             --platform linux \
             --targets deb \
-            --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
+            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-amd64.{{ext}}'
 
       # Package the build.
       - name: Copy build for deb
