--- a/.github/workflows/test-linux-snapcraft-arm64.yml
+++ b/.github/workflows/test-linux-snapcraft-arm64.yml
@@ -37,11 +37,30 @@ jobs:
       - name: Install snapcraft
         run: sudo snap install snapcraft --classic
 
+      - name: Set version
+        id: version_step
+        run: |
+          VERSION=$(yq '.version' pubspec.yaml)
+          echo "VERSION: $VERSION."
+
+          VERSION_SHORT=$(echo "$VERSION" | sed -e "s/+.*//")
+          echo "VERSION_SHORT: $VERSION_SHORT."
+
+          BUILD_NUMBER=$(echo "$VERSION" | sed -e "s/.*+//")
+          echo "BUILD_NUMBER: $BUILD_NUMBER."
+
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
+
       - name: Build snap
         run: |
           # https://snapcraft.io/docs/flutter-applications
-          version=$(yq '.version' pubspec.yaml)
-          sudo snapcraft --output "picguard_"$version"_linux_aarch64.snap"
+          echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
+          sudo snapcraft --output "picguard-"$VERSION_SHORT.$BUILD_NUMBER"-linux-aarch64.snap"
+        env:
+          VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
+          BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
 
       # Package the build.
       - name: Copy build for snap
