--- a/.github/workflows/test-linux-tar-arm64.yml
+++ b/.github/workflows/test-linux-tar-arm64.yml
@@ -54,15 +54,32 @@ jobs:
           fi
           yq --version
 
+      - name: Set version
+        id: version_step
+        run: |
+          VERSION=$(yq '.version' pubspec.yaml)
+          echo "VERSION: $VERSION."
+
+          VERSION_SHORT=$(echo "$VERSION" | sed -e "s/+.*//")
+          echo "VERSION_SHORT: $VERSION_SHORT."
+
+          BUILD_NUMBER=$(echo "$VERSION" | sed -e "s/.*+//")
+          echo "BUILD_NUMBER: $BUILD_NUMBER."
+
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
+
       - name: Build tar
         run: |
-          baseDir=$(pwd)
-          VERSION=$(yq '.version' pubspec.yaml)
-          echo "$VERSION"
-          archiveName="picguard_"$VERSION"_linux_aarch64.tar.gz"
-          cd build/linux/arm64/release/bundle
+          echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
+          archiveName="picguard-"$VERSION_SHORT.$BUILD_NUMBER"-linux-aarch64.tar.gz"
           tar -czaf $archiveName ./*
-          mv $archiveName "$baseDir/"
+          mv $archiveName "$GITHUB_WORKSPACE/"
+        working-directory: build/linux/arm64/release/bundle
+        env:
+          VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
+          BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
 
       # Package the build.
       - name: Copy build for tar
