--- a/.github/workflows/test-linux-appimage-arm64.yml
+++ b/.github/workflows/test-linux-appimage-arm64.yml
@@ -59,7 +59,7 @@ jobs:
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" \
             --platform linux \
             --targets appimage \
-            --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
+            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-aarch64.{{ext}}'
 
       # Package the build.
       - name: Copy build for AppImage
