--- a/.github/workflows/test-macos-dmg.yml
+++ b/.github/workflows/test-macos-dmg.yml
@@ -109,14 +109,32 @@ jobs:
       - name: Build DMG
         run: bash scripts/build-dmg.sh
 
+      - name: Set version
+        id: version_step
+        run: |
+          VERSION=$(yq '.version' pubspec.yaml)
+          echo "VERSION: $VERSION."
+
+          VERSION_SHORT=$(echo "$VERSION" | sed -e "s/+.*//")
+          echo "VERSION_SHORT: $VERSION_SHORT."
+
+          BUILD_NUMBER=$(echo "$VERSION" | sed -e "s/.*+//")
+          echo "BUILD_NUMBER: $BUILD_NUMBER."
+
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
+
       # Package the build.
       - name: Copy build for dmg
         run: |
-          VERSION=$(yq '.version' pubspec.yaml)
-          echo "$VERSION"
+          echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
           ls -la *.dmg
-          mv PicGuard.dmg PicGuard_"$VERSION"_macos_universal.dmg
+          mv PicGuard.dmg PicGuard-"$VERSION_SHORT.$BUILD_NUMBER"-macos-universal.dmg
           ls -la *.dmg
+        env:
+          VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
+          BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
 
       - uses: actions/upload-artifact@v4
         with:
