--- a/.github/workflows/test-macos-pkg-appstore.yml
+++ b/.github/workflows/test-macos-pkg-appstore.yml
@@ -120,19 +120,29 @@ jobs:
         id: version_step
         run: |
           VERSION=$(yq '.version' pubspec.yaml)
-          echo "$VERSION"
+          echo "VERSION: $VERSION."
+
+          VERSION_SHORT=$(echo "$VERSION" | sed -e "s/+.*//")
+          echo "VERSION_SHORT: $VERSION_SHORT."
+
+          BUILD_NUMBER=$(echo "$VERSION" | sed -e "s/.*+//")
+          echo "BUILD_NUMBER: $BUILD_NUMBER."
+
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
 
       # Package the build.
       - name: Copy build for pkg
         run: |
-          echo "$VERSION"
+          echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
           ls -la *.pkg
-          mv PicGuard.pkg $GITHUB_WORKSPACE/PicGuard_"$VERSION"_macos_appstore_universal.pkg
+          mv PicGuard.pkg $GITHUB_WORKSPACE/PicGuard-"$VERSION_SHORT.$BUILD_NUMBER"-macos-appstore-universal.pkg
           ls -la *.pkg
         working-directory: build/macos/Build/Products/Release-free
         env:
-          VERSION: ${{ steps.version_step.outputs.version }}
+          VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
+          BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
 
       - uses: actions/upload-artifact@v4
         with:
