--- a/.github/workflows/test-windows-exe.yml
+++ b/.github/workflows/test-windows-exe.yml
@@ -72,7 +72,7 @@ jobs:
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
             --platform windows `
             --targets exe `
-            --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_x64.{{ext}}'
+            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-x64.{{ext}}'
 
       # Package the build.
       - name: Copy build for exe
