--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -23,6 +23,14 @@ jobs:
           channel: 'stable'
           flutter-version: '3.29.2'
 
+      - name: Reinstall rust toolchain
+        run: |
+          rustup --version
+          cargo --version
+          rustc --version
+          # https://github.com/rust-lang/rustup/issues/2729
+          rustup toolchain uninstall stable && rustup toolchain install stable
+
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
         env:
