--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -180,11 +180,18 @@ jobs:
 
       - name: Reinstall rust toolchain
         run: |
+          # https://github.com/rust-lang/rustup/issues/1408
+          rm -rf ~/.cargo ~/.rustup
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source $HOME/.cargo/env
+          rustup uninstall stable && rustup update nightly && rustup update stable
+          
+          # https://github.com/rust-lang/rustup/issues/2729
+          rustup toolchain uninstall stable && rustup toolchain install stable
+          
           rustup --version
           cargo --version
           rustc --version
-          # https://github.com/rust-lang/rustup/issues/2729
-          rustup toolchain uninstall stable && rustup toolchain install stable
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -270,11 +277,18 @@ jobs:
 
       - name: Reinstall rust toolchain
         run: |
+          # https://github.com/rust-lang/rustup/issues/1408
+          rm -rf ~/.cargo ~/.rustup
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source $HOME/.cargo/env
+          rustup uninstall stable && rustup update nightly && rustup update stable
+          
+          # https://github.com/rust-lang/rustup/issues/2729
+          rustup toolchain uninstall stable && rustup toolchain install stable
+          
           rustup --version
           cargo --version
           rustc --version
-          # https://github.com/rust-lang/rustup/issues/2729
-          rustup toolchain uninstall stable && rustup toolchain install stable
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -360,11 +374,18 @@ jobs:
 
       - name: Reinstall rust toolchain
         run: |
+          # https://github.com/rust-lang/rustup/issues/1408
+          rm -rf ~/.cargo ~/.rustup
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source $HOME/.cargo/env
+          rustup uninstall stable && rustup update nightly && rustup update stable
+          
+          # https://github.com/rust-lang/rustup/issues/2729
+          rustup toolchain uninstall stable && rustup toolchain install stable
+          
           rustup --version
           cargo --version
           rustc --version
-          # https://github.com/rust-lang/rustup/issues/2729
-          rustup toolchain uninstall stable && rustup toolchain install stable
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -455,11 +476,18 @@ jobs:
 
       - name: Reinstall rust toolchain
         run: |
+          # https://github.com/rust-lang/rustup/issues/1408
+          rm -rf ~/.cargo ~/.rustup
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source $HOME/.cargo/env
+          rustup uninstall stable && rustup update nightly && rustup update stable
+          
+          # https://github.com/rust-lang/rustup/issues/2729
+          rustup toolchain uninstall stable && rustup toolchain install stable
+          
           rustup --version
           cargo --version
           rustc --version
-          # https://github.com/rust-lang/rustup/issues/2729
-          rustup toolchain uninstall stable && rustup toolchain install stable
 
       - name: Flutter doctor -v
         run: flutter doctor -v
