--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,11 +53,18 @@ jobs:
 
       - name: Reinstall rust toolchain
         run: |
+          # https://github.com/rust-lang/rustup/issues/1408
+          rm -rf ~/.cargo ~/.rustup
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source $HOME/.cargo/env
+          rustup uninstall stable && rustup update nightly && rustup update stable
+          
+          # https://github.com/rust-lang/rustup/issues/2729
+          rustup toolchain uninstall stable && rustup toolchain install stable
+          
           rustup --version
           cargo --version
           rustc --version
-          # https://github.com/rust-lang/rustup/issues/2729
-          rustup toolchain uninstall stable && rustup toolchain install stable
 
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
