fix: update .gitignore

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ on:
       - 'metadata/**'
       - 'msi/picguard/LICENSE'
       - 'msi/picguard/README.md'
+      - '.gitignore'
       - 'CHANGELOG.md'
       - 'LICENSE'
       - 'Makefile'
@@ -24,6 +25,7 @@ on:
       - 'metadata/**'
       - 'msi/picguard/LICENSE'
       - 'msi/picguard/README.md'
+      - '.gitignore'
       - 'CHANGELOG.md'
       - 'LICENSE'
       - 'Makefile'
