--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
+.sentry-native/
 
 # IntelliJ related
 *.iml
@@ -21,7 +22,7 @@ migrate_working_dir/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -37,7 +38,6 @@ migrate_working_dir/
 .classpath
 .project
 .settings/
-.vscode/*
 
 # Symbolication related
 app.*.symbols
