fix: add license.rtf to windows folder

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2377,8 +2377,8 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
 
-      - name: copy LICENSE to the windows folder
-        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
+      - name: copy eula.rtf to the windows folder
+        run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Install yq
         shell: pwsh
@@ -2495,8 +2495,8 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
 
-      - name: copy LICENSE to the windows folder
-        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
+      - name: copy eula.rtf to the windows folder
+        run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Install yq
         shell: pwsh
@@ -2613,8 +2613,8 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
 
-      - name: copy LICENSE to the windows folder
-        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
+      - name: copy eula.rtf to the windows folder
+        run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Install yq
         shell: pwsh
@@ -2736,8 +2736,8 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
 
-      - name: copy LICENSE to the windows folder
-        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
+      - name: copy eula.rtf to the windows folder
+        run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Copy ChineseSimplified.isl to C:\Program Files (x86)\Inno Setup 6\Languages\
         run: |
@@ -2858,8 +2858,8 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
 
-      - name: copy LICENSE to the windows folder
-        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
+      - name: copy eula.rtf to the windows folder
+        run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Install fastforge
         run: dart pub global activate fastforge
