--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   bot_toast: ^4.1.3
   cupertino_icons: ^1.0.8
   device_info_plus: ^11.3.3
-  file_picker: ^10.0.0
+  file_picker: ^10.1.0
   file_saver: ^0.2.14
   flutter:
     sdk: flutter
@@ -49,14 +49,14 @@ dependencies:
   menu_bar: ^0.5.3
   multi_image_picker_view: ^3.0.0
   package_info_plus: ^8.3.0
-  permission_handler: ^11.4.0
+  permission_handler: ^12.0.0+1
   photo_view: ^0.15.0
   sentry_flutter: ^8.14.1
   sentry_logging: ^8.14.1
   shared_preferences: ^2.5.3
   slang_flutter: ^4.6.0
   super_drag_and_drop: ^0.9.0-dev.6
-  syncfusion_flutter_sliders: ^29.1.35
+  syncfusion_flutter_sliders: ^29.1.37
   synchronized: ^3.3.1
   tray_manager: ^0.4.0
   url_launcher: ^6.3.1
