--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1591,7 +1591,7 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get update -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y locate libfuse2
@@ -1664,7 +1664,7 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get update -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y locate libfuse2
@@ -1743,7 +1743,7 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get update -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y rpm patchelf
@@ -1811,7 +1811,7 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get update -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
 
@@ -1883,7 +1883,7 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get update -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
 
@@ -1955,7 +1955,7 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get update -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y rpm patchelf
@@ -2035,7 +2035,7 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get update -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y p7zip-full p7zip-rar
@@ -2102,7 +2102,7 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get update -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y p7zip-full p7zip-rar
